<resources>
    <string name="app_name">ft_hangouts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone number</string>
    <string name="email">Email address</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="birth">Birthday</string>
    <string name="add_contact">Add a new Contact</string>
    <string name="send_sms">Send SMS</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="make_call">Call</string>
    <string name="img_avatar">Contact Picture</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="toast_empty_field">Empty firstname, lastname or phone number</string>

    <string name="NA">NA</string>

    <string name="toast_contact_save">New contact saved : %s</string>
    <string name="toast_contact_save_error">Error: contact not saved</string>
    <string name="toast_contact_update">Contact update : %s</string>
    <string name="contact_delete">Contact %s has been deleted</string>
    <string name="WarningDeleteContact">All informations about %s will be deleted !</string>
    <string name="DeleteBtn">Delete</string>
    <string name="CancelBtn">Cancel</string>
    <string name="DeleteContactTitle">Delete Contact definitively</string>
    <string name="send_the_message">Send the message</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="customApp">Custom your ft_hangouts</string>
    <string name="customAppInfo">Choose a color design</string>
</resources>
