<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactDetail">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ic_launcher_background">

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="-318dp"
                android:layout_toStartOf="@+id/btnEdit"
                app:srcCompat="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/delete_contact" />

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="318dp"
                android:layout_marginLeft="318dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:ignore="NotSibling"
                android:contentDescription="@string/edit_contact" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollInfo"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="51dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center"
                    android:text="@string/firstname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/lblPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnSms"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_dialog_email"
                        android:contentDescription="@string/send_sms" />

                    <ImageButton
                        android:id="@+id/btnCall"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_call"
                        android:contentDescription="@string/make_call" />
                </LinearLayout>

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/lblAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/labelBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:text="@string/birth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/lblNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>