<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="221dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:scrollbars="none"
            android:scrollHorizontally="false" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit_contact" />

            <ImageButton
                android:id="@+id/btnSms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_dialog_email"
                android:contentDescription="@string/send_sms" />

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_call"
                android:contentDescription="@string/make_call" />


        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>